# vripr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  README.md  build.rs  mkdocs.yml  probe.txt  pyproject.toml  requirements-dev.txt  requirements.txt  vinyl_ripper.ini.template  vripr_pipe_probe.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
assets/: boundary_detector.onnx
docs/: configuration.md  index.md  installation.md  usage.md
scripts/: install_fpcalc.sh  setup_audacity_pipe.md
src/: app.rs  config.rs  fonts.rs  lib.rs  main.rs  pipe.rs  tagging.rs  track.rs
src/audio/: mod.rs  onnx_detect.rs
src/metadata/: acoustid.rs  discogs.rs  genre.rs  mod.rs  musicbrainz.rs
src/ui/: discogs_picker.rs  export_dialog.rs  manual_track_dialog.rs  mod.rs  settings_dialog.rs  toolbar.rs  track_table.rs  waveform.rs
src/vripr/: __init__.py  __main__.py  app.py
src/workers/: export.rs  fingerprint.rs  guided.rs  mod.rs  silence.rs  silence_local.rs  training_samples.rs
tests/: test_pipe.py  test_pipe.rs  test_tagging.py  test_tagging.rs  test_template.rs  test_track.rs  test_track_meta.py
