[package]
name = "vripr"
version = "0.2.5"
edition = "2024"
description = "VRipr — Master Vinyl Rippage — Audacity assistant for digitising vinyl records"
license = "MIT"
rust-version = "1.87"

[[bin]]
name = "vripr"
path = "src/main.rs"

[lib]
name = "vripr"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.28", features = ["default"] }
egui = "0.28"
egui_extras = { version = "0.28" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.21"
symphonia = { version = "0.5", features = ["pcm", "wav", "flac", "mp3", "ogg", "vorbis"] }
toml = "0.8"
anyhow = "1"
rustfft = "6"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rfd = "0.15"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["user"] }

chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true






